# High-Perf-Computing-for-AI

GEMM kernel in CUDA/: CMakeLists.txt  Makefile  README.md  build.bat  check_cuda.cu  gemm.cu  gemm.h  gemm_modal.py  main.cpp4.ii  main.cu  modal_run.py  test.cu  test.cudafe1.cpp
GEMM kernel in CUDA/include/: cuda_utils.cuh  gemm.cuh
GEMM kernel in CUDA/src/: gemm.cu  main.cu
cuda-mmm/: CMakeLists.txt  README.md  modal_run_sgemm.py
cuda-mmm/scripts/: profile_ncu.sh  run_4096.sh
cuda-mmm/src/: kernels.cuh  main.cu  utils.cuh
deepseek_moe_assignment/: README.md
deepseek_moe_assignment/src/: deepseek_moe_runner.c  generate_deepseek_moe_tests.py
deepseek_moe_multi_gpu/: README.md
deepseek_moe_multi_gpu/src/: generate_tests.py  moe_ep_distributed.py  run_tests.py
deepseek_moe_multi_gpu/src/moe_cuda/: CMakeLists.txt  main.cu  moe_kernels.cuh  nccl_utils.cuh
deepseek_moe_thunderkittens/: modal_compile_kernel.py  modal_moe.py  moe_expert_gemm.cu  requirements.txt  run_all.sh
flashattn2_assign/: Makefile  modal_run.py
flashattn2_assign/src/: flashattn_cpu.c  flashattn_cpu.h  flashattn_cuda.cu  flashattn_cuda.h  main.cu  naive_attention.c  naive_attention.h
flashattn_cute_assign/: modal_run.py
flashattn_cute_assign/src/: flashattn_cuda_cute.cu  flashattn_cuda_cute.h  main_cute.cu
matrix-multiplication/: Makefile  README.md
matrix-multiplication/benchmark/: benchmark.c
matrix-multiplication/src/: multi_thread.c  single_thread.c  timer.h
matrix-multiplication/tests/: test_correctness.c
nano-sglang-main/: README.md  modal_run.py  requirements.txt
nano-sglang-main/nano_sglang/: __init__.py  block_manager.py  config.py  engine.py  kv_cache.py  model.py  sampling.py  scheduler.py  sequence.py
nano-sglang-main/tests/: test_engine.py  test_kv_cache.py  test_scheduler.py
(+14 files in other folders)
